<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottomMenuNotifications"
        android:title="@string/title_notifications"
        android:icon="@drawable/ic_notifications_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/bottomMenuShowsSchedule"
        android:title="@string/title_schedule"
        android:icon="@drawable/ic_shows_schedule_white"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/bottomNavigationShowsFollowing"
        android:title="@string/title_following"
        android:icon="@drawable/ic_shows_following_white"
        app:showAsAction="ifRoom|withText" />
</menu>