<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/login_anilist_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_anilist_explanation"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_margin="16dp"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/login_guest_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_anilist_explanation"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/login_anilist_explanation"
        android:layout_margin="16dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/anilist_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_anilist"
        android:onClick="login"
        android:textColor="@color/colorTextWhite"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/guest_login"/>

    <Button
        android:id="@+id/guest_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_guest"
        android:onClick="loginAsGuest"
        android:textColor="@color/colorTextWhite"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>