<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTextWhite"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorTextBlack"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ReZero"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorTextGray"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/characters_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/characters"
        android:textStyle="bold"
        android:textColor="@color/colorTextGray"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characters_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/characters_label"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/characters_show_more"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/show_more"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/characters_recycler"
        android:gravity="center" />

    <TextView
        android:id="@+id/staff_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/staff"
        android:textStyle="bold"
        android:textColor="@color/colorTextGray"
        app:layout_constraintTop_toBottomOf="@id/characters_show_more"
        android:layout_marginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/staff_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/staff_label"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/staff_show_more"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/show_more"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/staff_recycler"
        android:gravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>